# tweet-test

./: .gitignore  pyproject.toml  readme.md
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_like_options_alter_tweet_options_and_more.py
tweets/templates/tweets/: tweet_list.html
